// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`native editor controls > classifies fields with responsive standard and compact presets at viewport 390 1`] = `
{
  "android": [
    {
      "class": "nc-field-form",
      "label": "Notification channel",
      "schema": [
        {
          "name": "channel",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Channel importance",
      "schema": [
        {
          "name": "importance",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                "min",
                "low",
                "default",
                "high",
                "max",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "nc-field-form",
      "label": "Tap URL or action",
      "schema": [
        {
          "name": "clickAction",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Dismiss after",
      "schema": [
        {
          "name": "timeout",
          "selector": {
            "number": {
              "min": 0,
              "mode": "box",
              "unit_of_measurement": "s",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Lock-screen visibility",
      "schema": [
        {
          "name": "visibility",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                "public",
                "private",
                "secret",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "nc-field-form",
      "label": "Channel vibration pattern",
      "schema": [
        {
          "name": "vibrationPattern",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
  ],
  "basic": [
    {
      "class": "nc-field-form",
      "label": "Name",
      "schema": [
        {
          "name": "name",
          "required": true,
          "selector": {
            "text": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form",
      "label": "Description",
      "schema": [
        {
          "name": "description",
          "selector": {
            "text": {
              "multiline": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form",
      "label": "Icon",
      "schema": [
        {
          "name": "icon",
          "selector": {
            "icon": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "conditions": [
    {
      "class": "",
      "label": "Check at startup",
      "schema": [
        {
          "name": "startup",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "Enable periodic condition checks",
      "schema": [
        {
          "name": "periodic",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Re-evaluate conditions every",
      "schema": [
        {
          "name": "interval",
          "selector": {
            "duration": {
              "enable_day": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "",
      "schema": [
        {
          "name": "conditions",
          "selector": {
            "condition": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "confirmation": [
    {
      "class": "",
      "label": "Button text",
      "schema": [
        {
          "disabled": true,
          "name": "buttons",
          "selector": {
            "object": {
              "description_field": "id",
              "fields": {
                "id": {
                  "label": "Button IDs (optional)",
                  "selector": {
                    "text": {},
                  },
                },
                "label": {
                  "label": "Button text",
                  "required": true,
                  "selector": {
                    "text": {},
                  },
                },
              },
              "label_field": "label",
              "multiple": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "Enable confirmation timeout",
      "schema": [
        {
          "disabled": true,
          "name": "forget_after_enabled",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Confirmation timeout",
      "schema": [
        {
          "disabled": true,
          "name": "timeout",
          "selector": {
            "duration": {
              "enable_day": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "ios": [
    {
      "class": "nc-field-form",
      "label": "Subtitle",
      "schema": [
        {
          "name": "subtitle",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form",
      "label": "Tap URL",
      "schema": [
        {
          "name": "url",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Interruption level",
      "schema": [
        {
          "name": "interruption-level",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                "passive",
                "active",
                "time-sensitive",
                "critical",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "",
      "label": "Notification sound",
      "schema": [
        {
          "name": "sound",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "App badge count",
      "schema": [
        {
          "name": "badge",
          "selector": {
            "number": {
              "min": 0,
              "mode": "box",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "",
      "label": "Foreground presentation",
      "schema": [
        {
          "name": "presentation_options",
          "selector": {
            "select": {
              "multiple": true,
              "options": [
                "alert",
                "badge",
                "sound",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input",
    },
  ],
  "mobile": [
    {
      "class": "nc-field-form",
      "label": "Notification group",
      "schema": [
        {
          "name": "group",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form",
      "label": "Notification icon",
      "schema": [
        {
          "name": "notification_icon",
          "selector": {
            "icon": {},
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form",
      "label": "Icon image URL",
      "schema": [
        {
          "name": "icon_url",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
  ],
  "notification": [
    {
      "class": "nc-field-form",
      "label": "Title",
      "schema": [
        {
          "name": "title",
          "selector": {
            "text": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "",
      "schema": [
        {
          "default": "Notification message",
          "name": "message",
          "selector": {
            "template": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "reminder": [
    {
      "class": "nc-field-form nc-compact",
      "label": "Remind every",
      "schema": [
        {
          "name": "interval",
          "selector": {
            "duration": {
              "enable_day": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Maximum reminders",
      "schema": [
        {
          "name": "max_attempts",
          "selector": {
            "number": {
              "max": 20,
              "min": 1,
              "mode": "box",
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "Show attempt count in notification title",
      "schema": [
        {
          "name": "show_attempts",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "when": [
    {
      "class": "nc-field-form nc-compact",
      "label": "Automation mode",
      "schema": [
        {
          "disabled": false,
          "name": "automation_mode",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                {
                  "label": "Parallel (run triggers independently)",
                  "value": "parallel",
                },
                {
                  "label": "Single (ignore new triggers while running)",
                  "value": "single",
                },
                {
                  "label": "Restart (cancel and start again)",
                  "value": "restart",
                },
                {
                  "label": "Queued (run triggers in order)",
                  "value": "queued",
                },
              ],
            },
          },
        },
      ],
      "wrapper": null,
    },
  ],
}
`;

exports[`native editor controls > classifies fields with responsive standard and compact presets at viewport 1100 1`] = `
{
  "android": [
    {
      "class": "nc-field-form",
      "label": "Notification channel",
      "schema": [
        {
          "name": "channel",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Channel importance",
      "schema": [
        {
          "name": "importance",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                "min",
                "low",
                "default",
                "high",
                "max",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "nc-field-form",
      "label": "Tap URL or action",
      "schema": [
        {
          "name": "clickAction",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Dismiss after",
      "schema": [
        {
          "name": "timeout",
          "selector": {
            "number": {
              "min": 0,
              "mode": "box",
              "unit_of_measurement": "s",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Lock-screen visibility",
      "schema": [
        {
          "name": "visibility",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                "public",
                "private",
                "secret",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "nc-field-form",
      "label": "Channel vibration pattern",
      "schema": [
        {
          "name": "vibrationPattern",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
  ],
  "basic": [
    {
      "class": "nc-field-form",
      "label": "Name",
      "schema": [
        {
          "name": "name",
          "required": true,
          "selector": {
            "text": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form",
      "label": "Description",
      "schema": [
        {
          "name": "description",
          "selector": {
            "text": {
              "multiline": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form",
      "label": "Icon",
      "schema": [
        {
          "name": "icon",
          "selector": {
            "icon": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "conditions": [
    {
      "class": "",
      "label": "Check at startup",
      "schema": [
        {
          "name": "startup",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "Enable periodic condition checks",
      "schema": [
        {
          "name": "periodic",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Re-evaluate conditions every",
      "schema": [
        {
          "name": "interval",
          "selector": {
            "duration": {
              "enable_day": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "",
      "schema": [
        {
          "name": "conditions",
          "selector": {
            "condition": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "confirmation": [
    {
      "class": "",
      "label": "Button text",
      "schema": [
        {
          "disabled": true,
          "name": "buttons",
          "selector": {
            "object": {
              "description_field": "id",
              "fields": {
                "id": {
                  "label": "Button IDs (optional)",
                  "selector": {
                    "text": {},
                  },
                },
                "label": {
                  "label": "Button text",
                  "required": true,
                  "selector": {
                    "text": {},
                  },
                },
              },
              "label_field": "label",
              "multiple": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "Enable confirmation timeout",
      "schema": [
        {
          "disabled": true,
          "name": "forget_after_enabled",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Confirmation timeout",
      "schema": [
        {
          "disabled": true,
          "name": "timeout",
          "selector": {
            "duration": {
              "enable_day": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "ios": [
    {
      "class": "nc-field-form",
      "label": "Subtitle",
      "schema": [
        {
          "name": "subtitle",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form",
      "label": "Tap URL",
      "schema": [
        {
          "name": "url",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Interruption level",
      "schema": [
        {
          "name": "interruption-level",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                "passive",
                "active",
                "time-sensitive",
                "critical",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "",
      "label": "Notification sound",
      "schema": [
        {
          "name": "sound",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input",
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "App badge count",
      "schema": [
        {
          "name": "badge",
          "selector": {
            "number": {
              "min": 0,
              "mode": "box",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input nc-compact",
    },
    {
      "class": "",
      "label": "Foreground presentation",
      "schema": [
        {
          "name": "presentation_options",
          "selector": {
            "select": {
              "multiple": true,
              "options": [
                "alert",
                "badge",
                "sound",
              ],
            },
          },
        },
      ],
      "wrapper": "nc-option-input",
    },
  ],
  "mobile": [
    {
      "class": "nc-field-form",
      "label": "Notification group",
      "schema": [
        {
          "name": "group",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form",
      "label": "Notification icon",
      "schema": [
        {
          "name": "notification_icon",
          "selector": {
            "icon": {},
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
    {
      "class": "nc-field-form",
      "label": "Icon image URL",
      "schema": [
        {
          "name": "icon_url",
          "selector": {
            "text": {
              "placeholder": "Not set",
            },
          },
        },
      ],
      "wrapper": "nc-option-input nc-field-input",
    },
  ],
  "notification": [
    {
      "class": "nc-field-form",
      "label": "Title",
      "schema": [
        {
          "name": "title",
          "selector": {
            "text": {},
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "",
      "schema": [
        {
          "default": "Notification message",
          "name": "message",
          "selector": {
            "template": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "reminder": [
    {
      "class": "nc-field-form nc-compact",
      "label": "Remind every",
      "schema": [
        {
          "name": "interval",
          "selector": {
            "duration": {
              "enable_day": true,
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "nc-field-form nc-compact",
      "label": "Maximum reminders",
      "schema": [
        {
          "name": "max_attempts",
          "selector": {
            "number": {
              "max": 20,
              "min": 1,
              "mode": "box",
            },
          },
        },
      ],
      "wrapper": null,
    },
    {
      "class": "",
      "label": "Show attempt count in notification title",
      "schema": [
        {
          "name": "show_attempts",
          "selector": {
            "boolean": {},
          },
        },
      ],
      "wrapper": null,
    },
  ],
  "when": [
    {
      "class": "nc-field-form nc-compact",
      "label": "Automation mode",
      "schema": [
        {
          "disabled": false,
          "name": "automation_mode",
          "selector": {
            "select": {
              "mode": "dropdown",
              "options": [
                {
                  "label": "Parallel (run triggers independently)",
                  "value": "parallel",
                },
                {
                  "label": "Single (ignore new triggers while running)",
                  "value": "single",
                },
                {
                  "label": "Restart (cancel and start again)",
                  "value": "restart",
                },
                {
                  "label": "Queued (run triggers in order)",
                  "value": "queued",
                },
              ],
            },
          },
        },
      ],
      "wrapper": null,
    },
  ],
}
`;

exports[`native editor controls > groups automation mode, triggers, conditions and inactive controls under When 1`] = `
[
  {
    "disabled": false,
    "name": "automation_mode",
    "selector": {
      "select": {
        "mode": "dropdown",
        "options": [
          {
            "label": "Parallel (run triggers independently)",
            "value": "parallel",
          },
          {
            "label": "Single (ignore new triggers while running)",
            "value": "single",
          },
          {
            "label": "Restart (cancel and start again)",
            "value": "restart",
          },
          {
            "label": "Queued (run triggers in order)",
            "value": "queued",
          },
        ],
      },
    },
  },
]
`;

exports[`native editor controls > groups automation mode, triggers, conditions and inactive controls under When 2`] = `
[
  "Basics",
  "When",
  "Triggers",
  "Conditions",
  "Inactive",
  "Recipients",
  "Notification",
  "Post-send actions",
  "Android",
  "iOS / macOS",
  "Confirmation",
  "Reminder policy",
  "Notify recipients when confirmed",
  "Post-confirmation actions",
]
`;

exports[`native editor controls > keeps alert_once as a direct boolean switch and guards writes when Android is off 1`] = `
{
  "description": "Sound and vibration only on the first notification for a tag.",
  "heading": {
    "class": "nc-heading",
    "help": "More information: Alert only once",
    "text": "Alert only once",
  },
  "row": "nc-option nc-option-inline",
  "switch": {
    "checked": false,
    "disabled": true,
    "label": "Alert only once",
  },
}
`;

exports[`native editor controls > keeps android field help in icons without inline helpers or duplicate section topics 1`] = `
[
  {
    "description": "Android 8+: channel name. Omit to use General. Existing channel settings are controlled on the device.",
    "label": "Notification channel",
  },
  {
    "description": "Sets initial channel importance. Once created, only lowering importance is supported, unless the user has already changed it.",
    "label": "Channel importance",
  },
  {
    "description": "Android only. Does not prevent swiping away; use Persistent as well.",
    "label": "Keep after tapping",
  },
  {
    "description": "Android only; marks the notification as ongoing using this alert's tag. Android 14+ permits individual swipe dismissal while unlocked, but protects it while locked and from Clear all. Enable Sticky too if tapping should not dismiss it. iOS has no equivalent setting.",
    "label": "Persistent notification",
  },
  {
    "description": "Sound and vibration only on the first notification for a tag.",
    "label": "Alert only once",
  },
  {
    "description": "Comma-separated milliseconds: off, on, off, on. Applies when creating the channel.",
    "label": "Channel vibration pattern",
  },
  {
    "description": "Sets the physical notification LED color on supported Android devices, not the on-screen notification color. Applied when the channel is first created; existing channels retain their device settings.",
    "label": "Channel LED color",
  },
]
`;

exports[`native editor controls > keeps configured confirmation subpanels accessible when confirmation is disabled 1`] = `
[
  "Basics",
  "When",
  "Triggers",
  "Conditions",
  "Inactive",
  "Recipients",
  "Notification",
  "Post-send actions",
  "Android",
  "iOS / macOS",
  "Confirmation",
  "Reminder policy",
  "Notify recipients when confirmed",
  "Post-confirmation actions",
]
`;

exports[`native editor controls > keeps ios field help in icons without inline helpers or duplicate section topics 1`] = `
[
  {
    "description": "iOS 15+: passive, active, time-sensitive (can override Focus), or critical (requires critical-alert permission).",
    "label": "Interruption level",
  },
  {
    "description": "Sound name, default, or none. Structured critical sound settings remain available in YAML.",
    "label": "Notification sound",
  },
  {
    "description": "Hex color for the Material Design sender icon. Has no effect on an icon image URL.",
    "label": "Icon glyph color",
  },
]
`;

exports[`native editor controls > keeps mobile field help in icons without inline helpers or duplicate section topics 1`] = `
[
  {
    "description": "Groups notifications on Android and iOS. iOS critical notifications cannot be grouped.",
    "label": "Notification group",
  },
  {
    "description": "Hex color such as #03A9F4. On Android, sets the notification accent color, typically used for the small icon or header accents, not the entire notification background. Appearance varies by Android version, device, and theme. On iOS, colors the background of a Material Design sender icon.",
    "label": "Notification color",
  },
  {
    "description": "Android status-bar icon; iOS sender icon (requires a title).",
    "label": "Notification icon",
  },
  {
    "description": "Public image URL or /local/ path. On iOS, overrides the Material Design icon and requires a title.",
    "label": "Icon image URL",
  },
]
`;

exports[`native editor controls > keeps persistent as a direct boolean switch and guards writes when Android is off 1`] = `
{
  "description": "Android only; marks the notification as ongoing using this alert's tag. Android 14+ permits individual swipe dismissal while unlocked, but protects it while locked and from Clear all. Enable Sticky too if tapping should not dismiss it. iOS has no equivalent setting.",
  "heading": {
    "class": "nc-heading",
    "help": "More information: Persistent notification",
    "text": "Persistent notification",
  },
  "row": "nc-option nc-option-inline",
  "switch": {
    "checked": false,
    "disabled": true,
    "label": "Persistent notification",
  },
}
`;

exports[`native editor controls > keeps sticky as a direct boolean switch and guards writes when Android is off 1`] = `
{
  "description": "Android only. Does not prevent swiping away; use Persistent as well.",
  "heading": {
    "class": "nc-heading",
    "help": "More information: Keep after tapping",
    "text": "Keep after tapping",
  },
  "row": "nc-option nc-option-inline",
  "switch": {
    "checked": false,
    "disabled": true,
    "label": "Keep after tapping",
  },
}
`;

exports[`native editor controls > offers five root tasks and all children with one selected section at width 390 1`] = `
[
  "Basics",
  "When",
  "Triggers",
  "Conditions",
  "Inactive",
  "Recipients",
  "Notification",
  "Post-send actions",
  "Android",
  "iOS / macOS",
  "Confirmation",
  "Reminder policy",
  "Notify recipients when confirmed",
  "Post-confirmation actions",
]
`;

exports[`native editor controls > offers five root tasks and all children with one selected section at width 1100 1`] = `
[
  "Basics",
  "When",
  "Triggers",
  "Conditions",
  "Inactive",
  "Recipients",
  "Notification",
  "Post-send actions",
  "Android",
  "iOS / macOS",
  "Confirmation",
  "Reminder policy",
  "Notify recipients when confirmed",
  "Post-confirmation actions",
]
`;

exports[`native editor controls > preserves native inactive controls through enablement, save and YAML with clear notification false 1`] = `
[
  {
    "name": "triggers",
    "selector": {
      "trigger": {},
    },
  },
]
`;

exports[`native editor controls > preserves native inactive controls through enablement, save and YAML with clear notification true 1`] = `
[
  {
    "name": "triggers",
    "selector": {
      "trigger": {},
    },
  },
]
`;
